<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_ligth_grey">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        app:layout_constraintVertical_bias="0.029">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Email_hint"
            android:inputType="textEmailSubject"
            android:paddingStart="5dp"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLogin"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:text="@string/to_register"
        android:theme="@style/Theme.BlueButton"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardPassword"
        app:layout_constraintStart_toStartOf="@+id/cardPassword"
        app:layout_constraintTop_toBottomOf="@+id/cardPassword"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>