<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_ligth_grey">

    <TextView
        android:id="@+id/tvForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forget_password_form"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForget"
        app:layout_constraintVertical_bias="0.029">

        <EditText
            android:id="@+id/etEmailForget"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/Email_hint"
            android:inputType="textEmailSubject"
            android:paddingStart="5dp"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonRemind"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp"
        android:text="@string/to_remind"
        android:theme="@style/Theme.RedButton"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardLogin"
        app:layout_constraintStart_toStartOf="@+id/cardLogin"
        app:layout_constraintTop_toBottomOf="@+id/cardLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>