<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_ligth_grey"
    tools:context=".StartSignActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        app:srcCompat="@drawable/logo_740x740" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivName">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/Email_hint"
            android:inputType="textEmailAddress|textEmailSubject"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/light_red"
            android:textColorHint="@color/dark_grey"
            android:textColorLink="@color/light_red"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLogin">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:text="@string/log_in"
        android:theme="@style/Theme.BlueButton"
        app:cornerRadius="25dp"
        app:layout_constraintStart_toStartOf="@+id/cardPassword"
        app:layout_constraintTop_toBottomOf="@+id/cardPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonForget"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:text="@string/forget_password"
        android:textSize="12sp"
        android:theme="@style/Theme.RedButton"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/cardPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/cardPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonSignGoogle"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:drawableLeft="@drawable/googleg_standard_color_18"
        android:drawingCacheQuality="auto"
        android:text="@string/google_sign_in"
        android:textAllCaps="false"
        android:theme="@style/Theme.WhiteButton"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonForget"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/to_register"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignGoogle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonSignGoogle" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="33dp"
        android:text="Exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/create_top_label_alt_250x60" />

</androidx.constraintlayout.widget.ConstraintLayout>