<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateDisputActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/ligth_grey"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></LinearLayout>

        <ImageView
            android:id="@+id/ivCreateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/create_top_label_alt_250x60" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/very_ligth_grey"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/very_ligth_grey"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDisputTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/disput_theme"
                        android:textColor="@color/very_dark_red"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etDisputTheme"
                        android:layout_width="match_parent"
                        android:layout_height="29dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:hint="@string/hint_et_disput_theme"
                        android:inputType="textPersonName|textCapSentences"
                        android:maxLength="30"
                        android:minHeight="48dp"
                        android:shadowColor="@color/dark_grey"
                        android:textAlignment="textEnd"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/light_red"
                        android:textColorHint="@color/dark_grey"
                        android:textColorLink="@color/dark_red"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDisputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/disput_description"
                        android:textColor="@color/very_dark_red"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etDisputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:gravity="top"
                        android:hint="@string/disput_descr_hint"
                        android:inputType="textMultiLine|textCapSentences"
                        android:minHeight="48dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_grey"
                        android:textColorLink="@color/dark_red"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="25dp"
                app:cardPreventCornerOverlap="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvBetType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/bet_type"
                        android:textColor="@color/very_dark_red"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvBetType"
                        app:layout_constraintTop_toBottomOf="@+id/tvBetType"
                        app:layout_constraintVertical_bias="0.0">

                        <RadioButton
                            android:id="@+id/rbRatio"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/ratio"
                            android:textStyle="bold"
                            tools:ignore="TouchTargetSizeCheck" />

                        <RadioButton
                            android:id="@+id/rbMoney"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:text="@string/money"
                            android:textStyle="bold"
                            tools:ignore="TouchTargetSizeCheck" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/tvBetText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:text="@string/bet"
                        android:textColor="@color/very_dark_red"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/etBet"
                        app:layout_constraintTop_toTopOf="@+id/etBet" />

                    <EditText
                        android:id="@+id/etBet"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="48dp"
                        android:background="@color/ligth_grey"
                        android:ems="10"
                        android:hint="0"
                        android:inputType="number"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tvBetType"
                        app:layout_constraintTop_toBottomOf="@+id/tvBetType"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/ligth_grey"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <Button
            android:id="@+id/btnCanceled"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:onClick="closeDisputCreate"
            android:text="отмена"
            android:theme="@style/Theme.RedButton"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnComfirm"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:onClick="onClickPublish"
            android:text="Спорить!"
            android:theme="@style/Theme.BlueButton"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>